--- a/HTML-CSS/11. Cas/style.css
+++ b/HTML-CSS/11. Cas/style.css
@@ -1,3 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
+
+/* Ovo smo uzeli sa google fonts sajta i selektovali smo import
+i ovo upisemo u css i tjt */
+
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Exo 2', 'sans-serif';
+
+}
+
+.glavni p {
+    text-align: justify;
+    margin: 0 15px;
+    padding: 0 15px;
+}
+
+.glavni {
+    background-color: aqua;
 }
