--- a/HTML-CSS/11. Cas/style.css
+++ b/HTML-CSS/11. Cas/style.css
@@ -1,3 +1,7 @@
+* {
+    margin: 0;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Exo+2&display=swap');
 
 /* Ovo smo uzeli sa google fonts sajta i selektovali smo import
@@ -8,12 +12,19 @@ body {
 
 }
 
-.glavni p {
-    text-align: justify;
-    margin: 0 15px;
-    padding: 0 15px;
-}
-
 .glavni {
     background-color: aqua;
+    width: 600px;
+    padding: 15px 0px;
+    margin: 50px auto;
 }
+
+.glavni-p {
+    text-align: justify;
+    padding: 20px;
+}
+
+.glavni h1 {
+    text-align: center;
+    text-transform: uppercase;
+}   
