--- a/HTML-CSS/11. Cas/style2.css
+++ b/HTML-CSS/11. Cas/style2.css
@@ -1,31 +1,34 @@
+* {
+    margin: 0;
+    padding: 0;
+}
+
 body {
-    background-color: rgb(118, 118, 118);
-    font-family: 'Exo 2', sans-serif;
+    background-color: rgb(74, 74, 74);
 }
 
 .container {
-    background-color: aqua;
+    background-color: #00ffff;
     width: 600px;
-    
-    border: 2px solid black;
+    border: 2px dashed rgb(88, 88, 88);
     margin: 10px auto;
     border-radius: 25px;
 }
 
 .container img {
     width: 600px;
-    height: 380px;
+    height: 370px;
     border-top-left-radius: 25px;
     border-top-right-radius: 25px;
     padding-bottom: 20px;
 }
 
 .container .ikon {
-    padding: 8px;
+    padding: 12px;
     font-size: 22px;
 }
 
 .container p {
     font-size: 22px;
-    padding: 0 10px;
+    padding: 6px 10px;
 }
