--- a/HTML-CSS/23. Cas/style.css
+++ b/HTML-CSS/23. Cas/style.css
@@ -3,3 +3,56 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+.parent {
+    margin: 20px auto;
+    width: 80%;
+    height: 600px;
+    background-color: darkslateblue;
+    /* overflow: auto; */
+
+    display: grid;
+    /* grid-template-columns: 150px 150px 150px; */
+    /* grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr; */
+    /* grid-template-columns: repeat(3, 150px); */
+    grid-template-columns: 150px 150px 150px;
+
+    /* grid-template-rows: 100px 100px; prva vrednost prvi red, drugi red drugi itd...     */
+    /* grid-auto-rows: 150px; */
+    grid-auto-rows: minmax(150px, auto);
+
+    /* grid-row-gap: 25px;
+    grid-column-gap: 25px; */
+
+    /* grid-gap: 25px; */
+    grid-gap: 25px 25px;
+}
+
+/* .parent .box {
+    width: 150px; 
+    height: 150px;
+} */
+
+.parent .box1 {
+    background-color: darkgoldenrod;
+}
+
+.parent .box2 {
+    background-color: darkred;
+}
+
+.parent .box3 {
+    background-color: darkkhaki;
+}
+
+.parent .box4 {
+    background-color: darkgreen;
+}
+
+.parent .box5 {
+    background-color: rebeccapurple;
+}
+
+.parent .box6 {
+    background-color: darkviolet;
+}
